ps3 select. Reworked it. Made it not shifting the underlying text. Prevented queue animations.

--- a/ps3-jquery/select/css/theme.css
+++ b/ps3-jquery/select/css/theme.css
@@ -1,39 +1,50 @@
+:root {
+  --select-bg-color: white;
+  --active-border-color: #96c8da;
+  --border-color: #dedede;
+  --divider-color: #fbfbfb;
+  --placeholder-color: #cacaca;
+}
+
 html, body {
   overflow-x: hidden;
   overflow-y: hidden;
+  width: 100%;
+  height: 100%;
 }
 
 body {
   padding-top: 5%;
 }
 
-#dropdown,
-.selection,
 .panel,
 .bar {
-  margin: 0;
-  padding: 0;
   display: flex;
 }
 
 #dropdown {
+  display: flex;
   flex-direction: column;
   width: 600px;
-  margin: 0 auto;
-  border-radius: 10px;
-}
-
-#dropdown.default {
-  border: 2px solid #ddd;
-}
-
-#dropdown.active {
-  border: 2px solid #96d8ca;
-  padding-bottom: 10px;
+  margin: 1em auto;
+  /* border-radius: 10px; */
+  cursor: pointer;
+  position: relative;
 }
 
 .panel {
+  position: absolute;
+  top: 90px;
   flex-direction: column;
+  width: 100%;
+  box-sizing: border-box;
+  padding-bottom: 10px;
+  background-color: var(--select-bg-color);
+  border-left: 2px solid;
+  border-right: 2px solid;
+  border-bottom: 2px solid;
+  border-radius: 0 0 10px 10px;
+  border-color: var(--border-color);
 }
 
 .bar,
@@ -41,19 +52,37 @@ body {
 .selection {
   display: flex;
   align-items: center;
-  padding: 23px 30px;
   font-size: 30px;
   font-family: sans-serif;
+  padding-left: 30px;
+  padding-right: 30px;
+  height: 90px;
+}
+
+.selection {
+  border-radius: 10px;
+  border: 2px solid;
+  border-color: var(--border-color);
 }
 
 .selection.default,
 .restore-default-bar {
-  color: #aaa;
+  color: var(--placeholder-color);
+}
+
+#dropdown.active .selection {
+  border-radius: 10px 10px 0 0;
+  border-color: var(--active-border-color);
+}
+
+#dropdown.active .panel {
+  border-color: var(--active-border-color);
+  border-top: 2px solid var(--divider-color);
 }
 
 .bar:hover,
 .restore-default-bar:hover {
-  background-color: #eee;
+  background-color: var(--divider-color);
 }
 
 .selection span {
@@ -70,13 +99,14 @@ body {
   content: "▴";
 }
 
-.bar {
-  border-bottom: 2px solid #eee;
+.bar,
+.restore-default-bar {
+  border-bottom: 2px solid var(--divider-color);
 }
 
 .restore-default-bar,
 .panel .bar:nth-child(2) {
-  border-top: 2px solid #eee;
+  /* border-top: 2px solid var(--divider-color); */
 }
 
 .hidden {
